# ArchiveAI

./: .gitignore  README.md  nginx.conf
backend/: .env.example  .gitignore  Dockerfile  RAG.py  aws_s3.py  config.py  connection.py  dependencies.py  main.py  pipeline.py  pyproject.toml  utils.py
backend/datamodel/: types.py
backend/routes/: auth.py  sessions.py  utils.py  ws.py
frontend/: .env.example  .gitignore  Dockerfile  nginx.conf  package.json  pnpm-lock.yaml
frontend/src/Components/: LoginButton.tsx  LogoutButton.tsx  Profile.tsx  Session.tsx
frontend/src/app/: layout.tsx  page.tsx  providers.tsx
frontend/src/app/api/: get-query-client.ts  getAccessToken.ts
frontend/src/app/api/Messages/: createRun.ts  getMessages.ts
frontend/src/app/api/Sessions/: createSession.ts  deleteSession.ts  getSession.ts  getUser.ts
frontend/src/app/chat/: ChatInput.tsx  Message.tsx  Sidebar.tsx  UserContext.ts  layout.tsx  page.tsx
frontend/src/app/chat/[session]/: layout.tsx  page.tsx  utils.ts
frontend/src/app/types/: datamodel.ts
frontend/src/lib/: auth0.ts
