[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "auth0-fastapi-api>=1.0.0b5",
    "boto3[crt]>=1.42.68",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.0",
    "httpx>=0.28.1",
    "huggingface-hub>=1.18.0",
    "langchain-opendataloader-pdf>=2.0.0",
    "langchain-text-splitters>=1.1.2",
    "loguru>=0.7.3",
    "ollama>=0.6.1",
    "psycopg[binary]>=3.3.3",
    "pydantic[email,timezone]>=2.12.5",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.5.0",
    "qdrant-client>=1.18.0",
    "requests>=2.32.5",
    "sentence-transformers>=5.5.1",
    "sqlalchemy>=2.0.48",
    "sqlmodel>=0.0.37",
    "uuid6>=2025.0.1",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "locust>=2.43.3",
]
